--- a/templates/form.html
+++ b/templates/form.html
@@ -1,12 +1,25 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<h1>Enter text here:</h1>
+
+<h1>Welcome to LeGuinn Word-Counter!</h1>
+
+<h2>Text:</h2>
 
 
 <form action="/leguinncounter" method="POST">
       <!--<input class="textbox" type="textarea" name="text"></input>-->
-      <textarea name="input_text" rows="15" cols="50" wrap="physical">Once upon a time...</textarea>
+      <textarea name="input_text" rows="15" cols="50" wrap="physical">
+      Once upon a time, there was a dog called Tutu. He was nice. If you met him, you would like him too. Have you a dog? Say yes!! He lived in the U.S.S.R. I think. Or was it the U.S. of good ole A?
+      </textarea>
+
+      <h2>Word Max:</h2>
+
+      <div><input name="max" type="number" min=1 max=1000 value="4"></input></div>
+
+      <br>
+      <br>
+
       <div><input type="Submit", value="Count"></input></div>
 </form>
 
