Display text as formatted by user in input box
i.e. show indents, line breaks etc, rather than a long block of
text

--- a/templates/results.html
+++ b/templates/results.html
@@ -4,7 +4,7 @@
 {% block content %}
 
   <h1>Original Text</h1>
-  <p> {{input_text}} </p>
+  <p><pre style="white-space:pre-wrap;"> {{input_text}} </pre></p>
 
   <h1>Highlighted Text</h1>
   <p>
@@ -13,9 +13,9 @@
         {% set end = item[1] %}
 
         {% if item[2] == true %}
-          <span style="background-color:yellow;font-weight:900">{{ input_text[start:end] }}</span>
+          <pre style="background-color:yellow;font-weight:900;display:inline;">{{ input_text[start:end] }}</pre>
         {% else %}
-          <span>{{ input_text[start:end] }}</span>
+          <pre style="display:inline;">{{ input_text[start:end] }}</pre>
         {% endif %}
 
       {% endfor %}
