--- a/templates/results.html
+++ b/templates/results.html
@@ -11,8 +11,9 @@
       {% for item in highlight_data %}
         {% set start = item[0] %}
         {% set end = item[1] %}
+        {% set highlight = item[2] %}
 
-        {% if item[2] == true %}
+        {% if highlight == true %}
           <pre style="background-color:yellow;font-weight:900;display:inline;white-space:pre-wrap;">{{ input_text[start:end] }}</pre>
         {% else %}
           <pre style="display:inline;white-space:pre-wrap;">{{ input_text[start:end] }}</pre>
