Provide initial, yet buggy code to fix newline issue
Newline characters being ignored in highlighted text. Trying to figure
out why...

--- a/templates/results.html
+++ b/templates/results.html
@@ -12,6 +12,9 @@
         {% set start = item[0] %}
         {% set end = item[1] %}
         {% set highlight = item[2] %}
+        {% set whitespace = item[3] %}
+
+        <pre style="display:inline;white-space:pre-wrap;">{{whitespace}}</pre> 
 
         {% if highlight == true %}
           <pre style="background-color:yellow;font-weight:900;display:inline;white-space:pre-wrap;">{{ input_text[start:end] }}</pre>
