--- a/templates/results.html
+++ b/templates/results.html
@@ -50,22 +50,28 @@
           you want to be joined with the one following it.
         </p>
 
-        <form action="/leguinncounter" method="POST">
+        <form action="leguinncounter" method="POST">
 
-          <!-- For each option, you need to send back the index of the sentence
-          as per its position in the sentence list; the max num of words allowed,
-          the original text that was submitted, and, most importantly, an up-to-date
-          list of sentences that reflects all previous merges
-          -->
+          <!--HTTP is a stateless protocol; need to send this info back, so we
+         can redisplay it once the CGI web script is done processing-->
+          <input type='hidden' name="max" value={{max}}></input>
+          <input type='hidden' name="input_text" value="{{input_text}}"></input>
 
-          <select name="merge_list">
+          <!-- Need to resend the sentence list in case sentences have been
+           previously merged: parsing the original text will bring us back give
+          us sentences before they were merged.-->
+          {% for i in range(sentences|length) %}
+            <input type='hidden' name="sent_list[]" value="{{lgcounter.sentences[i]}}"</input>
+          {% endfor %}
+
+          <!-- Index of sentence chosen to merge with next-->
+          <select name="index">
             {% for i in range(sentences|length) %}
-              <option name="index" value="{{ [ i, max, lgcounter.text, lgcounter.sentences|join('||')] | join('::') }}">
+              <option value="{{ i }}">
                 {{sentences[i]}} (# words: {{lgcounter.count_words(sentences[i])}})
               </option>
             {% endfor %}
           </select>
-
 
           <div>
               <br>
