--- a/templates/form.html
+++ b/templates/form.html
@@ -15,7 +15,11 @@
 
       <h2>Word Max:</h2>
 
-      <div><input name="max" type="number" min=1 max=1000 value="7"></input></div>
+     <div><input name="max" type="number" min=1 max=1000 value="7"></input></div>
+
+      <!--For testing purposes
+      <div><input name="max"></input></div>
+      -->
 
       <br>
       <br>
