Refactors code to support app-level tests of merge page

--- a/templates/form.html
+++ b/templates/form.html
@@ -24,7 +24,7 @@
       <br>
       <br>
 
-      <div><input type="Submit", value="Count"></input></div>
+      <div><input name='submit_button' type="Submit", value="Count"></input></div>
 </form>
 
 
