--- a/templates/results.html
+++ b/templates/results.html
@@ -79,7 +79,7 @@
 
           <div>
               <br>
-            <input name="merge_button" type="Submit" value="Merge"></input>
+            <input name="submit_button" type="Submit" value="Merge"></input>
           </div>
 
         </form>
