--- a/templates/form.html
+++ b/templates/form.html
@@ -9,7 +9,7 @@
 
 <form action="/leguinncounter" method="POST">
       <!--<input class="textbox" type="textarea" name="text"></input>-->
-      <textarea name="input_text" rows="15" cols="50" wrap="soft">
+      <textarea name="input_text" wrap="soft">
       Once upon a time, there was a dog called Tutu. He was nice. If you met him, you would like him too. Have you a dog? Say yes!! He lived in the U.S.S.R. I think. Or was it the U.S. of good ole A?
       </textarea>
 
