--- a/templates/form.html
+++ b/templates/form.html
@@ -14,10 +14,10 @@
 
     <!-- Display message if input text over word count -->
     {% if is_over == True %}
+      <textarea name="input_text" wrap="soft" onload="enableSubmit();" onchange="enableSubmit();">{{ input_text }}</textarea>
       <p class="over"> {{ msg }} </p>
-      <textarea name="input_text" wrap="soft">{{ input_text }}</textarea>
     {% else %}
-      <textarea name="input_text" wrap="soft">
+      <textarea name="input_text" wrap="soft" onload="enableSubmit();" onchange="enableSubmit();">
         Once upon a time, there was a dog called Tutu. He was nice. If you met him, you would like him too. Have you a dog? Say yes!! He lived in the U.S.S.R. I think. Or was it the U.S. of good ole A?
       </textarea>
     {% endif %}
@@ -33,7 +33,7 @@
      <br>
      <br>
 
-     <div><input name='submit_button' type="Submit", value="Count"></input></div>
+     <div><input id='count' name='submit_button' type="Submit", value="Count", onclick="check();"></input></div>
 </form>
 
 
