--- a/templates/form.html
+++ b/templates/form.html
@@ -2,8 +2,7 @@
 
 {% block content %}
 
-<script type="text/javascript" src="{{ url_for('static', filename='count.js') }}">
-</script>
+
 
 <h1>Welcome to LeGuinn Word-Counter!</h1>
 
@@ -14,13 +13,13 @@
 
     <!-- Display message if input text over word count -->
     {% if is_over == True %}
-      <textarea name="input_text" wrap="soft" onload="enableSubmit();" onchange="enableSubmit();">{{ input_text }}</textarea>
+      <textarea name="input_text" wrap="soft" onload="updateWordCount();" oninput="enableSubmit();">{{ input_text }}</textarea>
       <p class="over"> {{ msg }} </p>
     {% else %}
-      <textarea name="input_text" wrap="soft" onload="enableSubmit();" onchange="enableSubmit();">
-        Once upon a time, there was a dog called Tutu. He was nice. If you met him, you would like him too. Have you a dog? Say yes!! He lived in the U.S.S.R. I think. Or was it the U.S. of good ole A?
-      </textarea>
+      <textarea name="input_text" wrap="soft" onload="updateWordCount();" oninput="enableSubmit();"></textarea>
     {% endif %}
+
+    <p>Word Count: <span id='word-count'>0</span> </p>
 
     <h2>Word Max:</h2>
 
@@ -34,9 +33,13 @@
      <br>
 
      <div><input id='count' name='submit_button' type="Submit", value="Count", onclick="check();"></input></div>
+
+
 </form>
 
+<script type="text/javascript" src="{{ url_for('static', filename='count.js') }}"></script>
 
+<!--Once upon a time, there was a dog called Tutu. He was nice. If you met him, you would like him too. Have you a dog? Say yes!! He lived in the U.S.S.R. I think. Or was it the U.S. of good ole A?-->
 
 
 <!--
@@ -56,3 +59,5 @@
 -->
 
 {% endblock %}
+
+<!--oninput="enableSubmit();"-->
