--- a/templates/form.html
+++ b/templates/form.html
@@ -6,15 +6,16 @@
 
   <h2>Text:</h2>
 
-  <form action="/leguinncounter" method="POST">
+  <form id="lgcform" action="/leguinncounter" method="POST">
 
     <!-- Display message if input text over word count -->
     {% if is_over == True %}
       <textarea name="input_text" wrap="soft" oninput="enableSubmit(); updateWordCount(); checkWordCount();">{{ input_text }}</textarea>
       <p class="over"> {{ msg }} </p>
     {% else %}
-      <textarea name="input_text" wrap="soft" oninput="enableSubmit(); updateWordCount(); checkWordCount();">Once upon a time, there was a dog called Tutu. He was nice. If you met him, you would like him too. Have you a dog? Say yes!! He lived in the U.S.S.R. I think. Or was it the U.S. of good ole A?</textarea>
+      <textarea name="input_text" wrap="soft" oninput="enableSubmit(); updateWordCount(); checkWordCount();"></textarea>
     {% endif %}
+
 
     <p>Word Count: <span id='word-count'>0</span> </p>
 
@@ -29,7 +30,11 @@
      <br>
      <br>
 
-     <div><input id='count' name='submit_button' type="Submit", value="Count"></input></div>
+     <div>
+      <input id='count' name='submit_button' type="Submit", value="Count" disabled></input>
+      <button type="button" value="Reset" onclick="resetAll();">Reset</button>
+    </div>
+
 
 
   </form>
