Prevent user from sending form if max is blank

--- a/templates/form.html
+++ b/templates/form.html
@@ -21,7 +21,9 @@
 
     <h2>Word Max:</h2>
 
-    <div><input name="max" type="number" min=1 max=1000 value="7"></input></div>
+    <div>
+      <input name="max" type="number" min=1 max=1000 value="7" oninput="enableSubmit();"></input>
+    </div>
 
     <!--For testing purposes
     <div><input name="max"></input></div>
