Handles errors when WORD_MAX is not set to a bad value or type

--- a/templates/form.html
+++ b/templates/form.html
@@ -34,7 +34,7 @@
 
      <div>
       <input id='count' name='submit_button' type="Submit", value="Count" disabled></input>
-      <button type="button" value="Reset" onclick="resetAll();">Reset</button>
+      <button id='reset' type="button" value="Reset" onclick="resetAll();">Reset</button>
     </div>
 
 
