Display error messages on form and console

--- a/templates/form.html
+++ b/templates/form.html
@@ -41,6 +41,9 @@
 
   </form>
 
+  <!--To display exceptions-->
+  <pre class='error'></pre>
+
   <script type="text/javascript" src="{{ url_for('static', filename='count.js') }}"></script>
 
 
