Clarify what the user needs to do in the textarea
Put in some placeholder. Nothing special.

--- a/templates/form.html
+++ b/templates/form.html
@@ -10,10 +10,19 @@
 
     <!-- Display message if input text over word count -->
     {% if is_over == True %}
-      <textarea name="input_text" wrap="soft" oninput="refresh();">{{ input_text }}</textarea>
+      <textarea
+      name="input_text"
+      placeholder="Write your story here..."
+      onfocus= "this.placeholder =''"
+      wrap="soft"
+      oninput="refresh();">{{ input_text }}</textarea>
+
       <p class="over"> {{ msg }} </p>
     {% else %}
-      <textarea name="input_text" wrap="soft" oninput="refresh();"></textarea>
+      <textarea name="input_text"
+       placeholder="Write your story here..."
+       onfocus= "this.placeholder =''"
+      wrap="soft" oninput="refresh();"></textarea>
     {% endif %}
 
 
