--- a/templates/form.html
+++ b/templates/form.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-  <h1>Welcome to LeGuinn Word-Counter!</h1>
+  <h1>Welcome to Le Guin Sentence Word Counter!</h1>
 
   <h2>Text:</h2>
 
