--- a/templates/form.html
+++ b/templates/form.html
@@ -31,7 +31,12 @@
     <h2>Word Max:</h2>
 
     <div>
-      <input name="max" type="number" min=1 max=1000 value="7" oninput="enableSubmit();"></input>
+      <input name="max"
+       type="number"
+       min=1
+       max="{{max}}"
+       value="7"
+       oninput="enableSubmit();"></input>
     </div>
 
     <!--For testing purposes
