--- a/static/style.css
+++ b/static/style.css
@@ -37,3 +37,13 @@ select[name=index]{
 p.over{
   color: red;
 }
+
+#wcTitle{
+  font-weight: 900;
+  margin-bottom: 2em;
+
+}
+
+#wcTitle > span{
+  font-weight: 400;
+}
